@@ -47,7 +47,6 @@
     BOOL tabViewDragOperationInProgress;
     BOOL resizeInProgress;
     BOOL windowInited;
-    NSTimer *timer;
 }
 
 - (id)init;
