@@ -1,3 +1,9 @@
+2003-10-09	ujwal
+
+    * Reverted to individual timer threads for each session. Other code 
+      is not fully tested yet.
+
+
 2003-10-09	fabian
 
     * Updated all localizations for Script menu.
